@@ -1,5 +1,6 @@
 This changelog shows an overview of what changed throughout VersionX releases, with the latest release or development log on top.
 
+Add ability to revert Plugins.
 Add ability to revert Snippets.
 Add ability to revert Templates.
 Add ability to revert Chunks.
